Facebook part done

--- a/inici.html
+++ b/inici.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="inici.css">
 </head>
 <body>
-    <button id="btn_change_background" onclick="cambiarColorEnlaces('blue')">Azul</button><br><br>
-    <input type="color" id="btn_change_links_colors"><button  id="btn_change_links">Aplicar cambios</button>
-    <br><br><button onclick="cambiarColorEnlaces('green')">Verde</button>
-    <a href="#">Enlace</a>
-    <a href="#">Otro Enlace</a>
+    <h3>FACEBOOK</h3>
+    <button id="btn_change_background">Canviar background a vermell</button><br><br>
+    <input type="color" id="btn_change_links_colors"><button  id="btn_change_links">Canviar links de color</button>
+    <br><br><button id="btn_delete_imgs">Borrar imatges</button>
+    <br><br><button id="btn_changeState_passwords">Change state passwords</button>
+
+    <h3>AMAZON</h3>
+    <button id="btn_sticky_menu">Sticky menu</button>
 </body>
 </html>
